# shared_ride_matching_system

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 8fcb4f5deca7_create_users_and_rides.py
app/: main.py
app/api/: drivers.py  health.py  rides.py  users.py
app/core/: config.py  exceptions.py
app/db/: session.py
app/models/: ride.py  user.py
